# riking

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
docs/: viking.md
src/: client.rs  endpoints.rs  error.rs  lib.rs  types.rs
src/endpoints/: v1.rs
src/types/: v1.rs
