[package]
edition = "2024"
license = "AGPL-3.0"
name = "riking"
version = "0.1.0"
description = "Unofficial OpenViking knowledge base HTTP API client for Rust"
repository = "https://github.com/Krysztal112233/rinking"
readme = "README.md"
keywords = ["openviking", "api", "client", "knowledge-base", "http"]
categories = ["api-bindings", "web-programming"]

[dependencies]
cfmt = { version = "0.*", package = "const_format" }
reqwest = { version = "0.13", features = ["json", "multipart", "query"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
snafu = "0.9"
